<resources>
    <string name="app_name">Calculator</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_ac">AC</string>
    <string name="btn_ce">CE</string>
    <string name="btn_separator">,</string>
    <string name="btn_equal">=</string>
    <string name="btn_sum">+</string>  
    <string name="btn_divide">/</string>
    <string name="btn_multiply">*</string>
    <string name="btn_subtract">-</string>
    <string name="btn_lparenthesis">(</string>
    <string name="btn_rparenthesis">)</string>
    <string name="txt_error">Erro:</string>
    <string name="txt_answer">Resposta:</string>
    <string name="txt_result">Entre com a expressão</string>
    <string name="txt_label_cpplibrary">Use Cpp Library</string>
    <string name="txt_label_java">Java in Calc …</string>
    <string name="txt_wait">…</string>
</resources>