<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txt_result"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:fontFamily="monospace"
            android:textSize="24sp"
            android:gravity="bottom|end"
            android:hint="@string/txt_result"
            android:inputType="textMultiLine"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_lparenthesis"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/btn_lparenthesis"
                    android:textSize="24sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_rparenthesis"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_rparenthesis"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_ce"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_ce"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_ac"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_ac"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_7"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_8"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" 
                    android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_9"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_divide"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" 
                    android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_divide"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" 
                    android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_4"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" 
                    android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_5"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" 
                    android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_6"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_multiply"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" 
                    android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_multiply"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" 
                    android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_1"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" 
                    android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_2"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" 
                    android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_3"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_subtract"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" 
                    android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_subtract"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" 
                    android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_0"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_dot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" 
                    android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_separator"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_equal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" 
                    android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_equal"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_sum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" 
                    android:onClick="onClick"
					android:textSize="24sp"
                    android:text="@string/btn_sum"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96dp">

            <TextView
                android:id="@+id/textView_label"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="false"
                android:gravity="center"
                android:hint="@string/txt_label_cpplibrary"
                android:text="@string/txt_label_cpplibrary"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <ToggleButton
                android:id="@+id/toggleButton_useCpp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp" >

            <TextView
                android:id="@+id/textView_info"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="false"
                android:gravity="center"
                android:hint=""
                android:text="@string/txt_wait"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>